# Pixeyas-Firmware

./: CMakeLists.txt  Makefile
cmake/configs/: nuttx_px4fmu-v2_default.cmake
nuttx-configs/px4fmu-v2/nsh/: defconfig
src/drivers/: drv_pwm_output.h
src/drivers/boards/px4fmu-v2/: board_config.h  px4fmu2_init.c
src/drivers/mpu6000/: mpu6000.cpp
src/drivers/ms5611/: CMakeLists.txt  ms5611.h  ms5611_nuttx.cpp  ms5611_sonar_spoof.cpp
src/drivers/px4fmu/: fmu.cpp
src/drivers/sonar_group/: CMakeLists.txt  sonar_group.c
src/drivers/sonar_group_service/: CMakeLists.txt  sonar_group_service.c  sonar_group_topic.h
src/drivers/stm32/: drv_pwm_servo.c
src/examples/px4_simple/: CMakeLists.txt  module.mk  px4_simple.c
src/modules/commander/: commander.cpp  commander_params.c
src/modules/mc_att_control/: mc_att_control_main.cpp
src/modules/sensors/: sensor_params.c
src/modules/systemlib/: system_params.c
